ci: setup prettier and eslint

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,8 @@
 {
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "printWidth": 80,
+  "arrowParens": "avoid",
+  "vueIndentScriptAndStyle": true,
   "semi": false,
   "singleQuote": true,
   "endOfLine": "lf",
