--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/fonts": "^0.8.0",
     "@nuxt/ui": "^2.18.4",
+    "@nuxtjs/supabase": "^1.4.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
