--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@node-rs/argon2": "^1.8.3",
     "@nuxt/fonts": "^0.8.0",
     "@nuxt/ui": "^2.18.4",
     "@nuxtjs/supabase": "^1.4.0",
