--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@nuxt/fonts": "^0.8.0",
     "@nuxt/ui": "^2.18.4",
     "@nuxtjs/supabase": "^1.4.0",
+    "@tiptap/extension-list-item": "^2.7.2",
+    "@tiptap/extension-text-style": "^2.7.2",
+    "@tiptap/pm": "^2.7.2",
+    "@tiptap/starter-kit": "^2.7.2",
+    "@tiptap/vue-3": "^2.7.2",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
@@ -21,9 +26,11 @@
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e",
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.0",
+    "@iconify-json/ph": "^1.2.0",
     "@nuxt/eslint": "^0.5.7",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "sass-embedded": "^1.79.3",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.6.2",
     "valibot": "^0.41.0"
