--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@nuxtjs/supabase": "^1.4.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/extension-list-item": "^2.7.4",
-    "@tiptap/extension-text-style": "^2.7.4",
-    "@tiptap/pm": "^2.7.4",
-    "@tiptap/starter-kit": "^2.7.4",
-    "@tiptap/vue-3": "^2.7.4",
+    "@tiptap/extension-list-item": "^2.8.0",
+    "@tiptap/extension-text-style": "^2.8.0",
+    "@tiptap/pm": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "@tiptap/vue-3": "^2.8.0",
     "nuxt": "^3.13.2",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
@@ -36,6 +36,6 @@
     "sass-embedded": "^1.79.4",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
-    "valibot": "^0.42.1"
+    "valibot": "1.0.0-beta.0"
   }
 }
