--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@nuxt/ui": "^2.18.7",
     "@nuxtjs/supabase": "^1.4.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@selemondev/vue3-marquee": "^0.0.8",
     "@sindresorhus/slugify": "^2.2.1",
     "@tiptap/extension-list-item": "^2.8.0",
     "@tiptap/extension-text-style": "^2.8.0",
@@ -25,7 +24,8 @@
     "@tiptap/vue-3": "^2.8.0",
     "nuxt": "^3.13.2",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-marquee": "^4.2.2"
   },
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e",
   "devDependencies": {
