--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@tiptap/pm": "^2.9.0",
     "@tiptap/starter-kit": "^2.9.0",
     "@tiptap/vue-3": "^2.9.0",
+    "clsx": "^2.1.1",
     "nuxt": "^3.13.2",
+    "tailwind-merge": "^2.5.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue3-marquee": "^4.2.2"
