--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@iconify-json/heroicons": "^1.2.1",
     "@iconify-json/ph": "^1.2.1",
     "@nuxt/eslint": "^0.6.0",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/nuxt": "^11.2.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "sass-embedded": "^1.80.3",
