--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "yogyakarta-book-party",
   "private": true,
   "type": "module",
   "scripts": {
@@ -14,6 +14,7 @@
     "@node-rs/argon2": "^2.0.0",
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/ui": "^2.19.2",
+    "@nuxtjs/seo": "2.0.0-rc.23",
     "@nuxtjs/supabase": "^1.4.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
