--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@tiptap/vue-3": "^2.9.1",
+    "@vueuse/integrations": "^11.2.0",
     "clsx": "^2.1.1",
     "nuxt": "^3.14.159",
+    "qrcode": "^1.5.4",
     "tailwind-merge": "^2.5.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
