--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
-    "@node-rs/argon2": "^2.0.0",
-    "@nuxt/fonts": "^0.10.2",
+    "@node-rs/argon2": "^2.0.2",
+    "@nuxt/fonts": "^0.10.3",
     "@nuxt/ui": "^2.19.2",
-    "@nuxtjs/seo": "2.0.0-rc.23",
-    "@nuxtjs/supabase": "^1.4.2",
+    "@nuxtjs/seo": "2.0.2",
+    "@nuxtjs/supabase": "^1.4.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/extension-list-item": "^2.9.1",
-    "@tiptap/extension-text-style": "^2.9.1",
-    "@tiptap/pm": "^2.9.1",
-    "@tiptap/starter-kit": "^2.9.1",
-    "@tiptap/vue-3": "^2.9.1",
-    "@vueuse/integrations": "^11.2.0",
+    "@tiptap/extension-list-item": "^2.10.3",
+    "@tiptap/extension-text-style": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
+    "@tiptap/vue-3": "^2.10.3",
+    "@vueuse/integrations": "^12.0.0",
     "clsx": "^2.1.1",
-    "nuxt": "^3.14.159",
+    "nuxt": "^3.14.1592",
     "qrcode": "^1.5.4",
-    "tailwind-merge": "^2.5.4",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
+    "tailwind-merge": "^2.5.5",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vue3-marquee": "^4.2.2"
   },
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e",
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.1",
     "@iconify-json/ph": "^1.2.1",
-    "@nuxt/eslint": "^0.6.1",
-    "@vueuse/core": "^11.2.0",
-    "@vueuse/nuxt": "^11.2.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "sass-embedded": "^1.80.6",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "valibot": "1.0.0-beta.3"
+    "@nuxt/eslint": "^0.7.2",
+    "@vueuse/core": "^12.0.0",
+    "@vueuse/nuxt": "^12.0.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "sass-embedded": "^1.82.0",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2",
+    "valibot": "1.0.0-beta.9"
   }
 }
