--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formkit/tempo": "^0.1.2",
     "@node-rs/argon2": "^2.0.2",
     "@nuxt/fonts": "^0.10.3",
+    "@nuxt/image": "1.8.1",
     "@nuxt/ui": "^2.20.0",
     "@nuxtjs/seo": "2.0.2",
     "@nuxtjs/supabase": "^1.4.4",
