--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@tiptap/vue-3": "^2.11.0",
     "@vueuse/integrations": "^12.3.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.15.1",
     "qrcode": "^1.5.4",
     "tailwind-merge": "^2.6.0",
+    "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
