--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
     "@tiptap/extension-list-item": "^2.11.3",
+    "@tiptap/extension-text-align": "^2.11.3",
     "@tiptap/extension-text-style": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
