--- a/package.json
+++ b/package.json
@@ -9,41 +9,50 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "packageManager": "pnpm@10.0.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "sharp",
+      "esbuild"
+    ]
+  },
   "dependencies": {
-    "@formkit/tempo": "^0.1.2",
     "@node-rs/argon2": "^2.0.2",
     "@nuxt/fonts": "^0.10.3",
-    "@nuxt/image": "1.8.1",
-    "@nuxt/ui": "^2.20.0",
-    "@nuxtjs/seo": "2.0.2",
-    "@nuxtjs/supabase": "^1.4.5",
+    "@nuxt/image": "1.9.0",
+    "@nuxt/ui": "^2.21.0",
+    "@nuxtjs/seo": "2.1.1",
+    "@nuxtjs/supabase": "^1.4.6",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/extension-list-item": "^2.11.0",
-    "@tiptap/extension-text-style": "^2.11.0",
-    "@tiptap/pm": "^2.11.0",
-    "@tiptap/starter-kit": "^2.11.0",
-    "@tiptap/vue-3": "^2.11.0",
-    "@vueuse/integrations": "^12.3.0",
+    "@tiptap/extension-list-item": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/extension-text-style": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/vue-3": "^2.11.5",
+    "@vueuse/integrations": "^12.5.0",
     "clsx": "^2.1.1",
-    "nuxt": "^3.15.1",
+    "date-fns": "^4.1.0",
+    "nuxt": "^3.15.4",
     "qrcode": "^1.5.4",
     "tailwind-merge": "^2.6.0",
+    "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e",
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
-    "@nuxt/eslint": "^0.7.5",
-    "@vueuse/core": "^12.4.0",
-    "@vueuse/nuxt": "^12.4.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "sass-embedded": "^1.83.1",
+    "@nuxt/eslint": "^1.0.1",
+    "@vueuse/core": "^12.5.0",
+    "@vueuse/nuxt": "^12.5.0",
+    "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
-    "valibot": "1.0.0-beta.11"
+    "valibot": "1.0.0-beta.15"
   }
 }
