--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@tiptap/vue-3": "^2.11.5",
-    "@vueuse/integrations": "^12.5.0",
+    "@vueuse/integrations": "^12.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "nuxt": "^3.15.4",
@@ -47,13 +47,13 @@
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
     "@nuxt/eslint": "^1.0.1",
-    "@vueuse/core": "^12.5.0",
-    "@vueuse/nuxt": "^12.5.0",
+    "@vueuse/core": "^12.7.0",
+    "@vueuse/nuxt": "^12.7.0",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass-embedded": "^1.83.4",
+    "sass-embedded": "^1.85.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
-    "valibot": "1.0.0-beta.15"
+    "valibot": "1.0.0-rc.0"
   }
 }
