--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
+      "esbuild",
       "sharp",
-      "esbuild"
+      "vue-demi"
     ]
   },
   "dependencies": {
@@ -34,11 +35,10 @@
     "@tiptap/starter-kit": "^2.11.5",
     "@tiptap/vue-3": "^2.11.5",
     "@vueuse/integrations": "^12.7.0",
-    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "motion-v": "^0.10.0",
     "nuxt": "^3.15.4",
     "qrcode": "^1.5.4",
-    "tailwind-merge": "^2.6.0",
     "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -46,13 +46,19 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
+    "@inspira-ui/plugins": "^0.0.1",
     "@nuxt/eslint": "^1.0.1",
+    "@tailwindcss/forms": "^0.5.10",
     "@vueuse/core": "^12.7.0",
     "@vueuse/nuxt": "^12.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass-embedded": "^1.85.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.3",
     "valibot": "1.0.0-rc.0"
   }
