--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
   "dependencies": {
     "@date-fns/tz": "^1.2.0",
     "@node-rs/argon2": "^2.0.2",
-    "@nuxt/fonts": "^0.10.3",
-    "@nuxt/image": "1.9.0",
-    "@nuxt/ui": "^2.21.0",
-    "@nuxtjs/seo": "2.1.1",
-    "@nuxtjs/supabase": "^1.4.6",
+    "@nuxt/fonts": "^0.11.1",
+    "@nuxt/image": "1.10.0",
+    "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/seo": "3.0.2",
+    "@nuxtjs/supabase": "^1.5.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/extension-list-item": "^2.11.5",
-    "@tiptap/extension-text-align": "^2.11.5",
-    "@tiptap/extension-text-style": "^2.11.5",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "@tiptap/vue-3": "^2.11.5",
-    "@vueuse/integrations": "^12.7.0",
+    "@tiptap/extension-list-item": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/extension-text-style": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
+    "@tiptap/vue-3": "^2.11.7",
+    "@vueuse/integrations": "^13.1.0",
     "date-fns": "^4.1.0",
-    "motion-v": "^0.10.0",
-    "nuxt": "^3.15.4",
+    "motion-v": "1.0.0-beta.2",
+    "nuxt": "^3.16.2",
     "qrcode": "^1.5.4",
     "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
@@ -45,21 +45,22 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.35",
     "@iconify-json/ph": "^1.2.2",
     "@inspira-ui/plugins": "^0.0.1",
-    "@nuxt/eslint": "^1.0.1",
+    "@nuxt/eslint": "^1.3.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@vueuse/core": "^12.7.0",
-    "@vueuse/nuxt": "^12.7.0",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/nuxt": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass-embedded": "^1.85.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
+    "sass-embedded": "^1.86.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.3",
-    "valibot": "1.0.0-rc.0"
+    "typescript": "^5.8.3",
+    "valibot": "1.0.0"
   }
 }
