--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "@iconify-json/ph": "^1.2.2",
     "@inspira-ui/plugins": "^0.0.1",
     "@nuxt/eslint": "^1.3.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@vueuse/core": "^13.1.0",
     "@vueuse/nuxt": "^13.1.0",
     "class-variance-authority": "^0.7.1",
