--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,9 @@
 pre-commit:
   parallel: true
   commands:
-    lint:
-      run: pnpm lint:fix
+    eslint:
+      glob: '*.{vue,ts}'
+      run: pnpm dlx eslint --fix {staged_files} # Lint staged files and auto-fix if possible
     prettier:
-      run: pnpm prettier
+      glob: '*.{vue,ts}'
+      run: pnpm dlx prettier --write {staged_files} # Format staged files in place
