feat: setup prettier plugin sort imports

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,22 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "@trivago/prettier-plugin-sort-imports"
+  ],
   "printWidth": 80,
   "arrowParens": "avoid",
   "semi": false,
   "singleQuote": true,
   "endOfLine": "lf",
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "importOrder": [
+    "<THIRD_PARTY_MODULES>",
+    "^@components/(.*)$",
+    "^@types/(.*)$",
+    "^@utils/(.*)$",
+    "^@store/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
