--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier . --write"
   },
-  "packageManager": "pnpm@10.4.0",
+  "packageManager": "pnpm@10.8.1",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
@@ -52,6 +52,8 @@
     "@iconify-json/ph": "^1.2.2",
     "@nuxt/eslint": "^1.0.1",
     "@nuxt/eslint-config": "^1.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vueuse/core": "^12.5.0",
     "@vueuse/nuxt": "^12.5.0",
     "eslint": "^9.24.0",
