--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier . --write"
   },
-  "packageManager": "pnpm@10.4.0",
+  "packageManager": "pnpm@10.8.1",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
-      "sharp",
-      "esbuild"
+      "esbuild",
+      "lefthook",
+      "sharp"
     ]
   },
   "dependencies": {
@@ -47,8 +51,12 @@
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
     "@nuxt/eslint": "^1.0.1",
+    "@nuxt/eslint-config": "^1.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@vueuse/core": "^12.5.0",
     "@vueuse/nuxt": "^12.5.0",
+    "eslint": "^9.24.0",
+    "lefthook": "^1.11.10",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass-embedded": "^1.83.4",
