--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "@parcel/watcher",
       "esbuild",
       "lefthook",
-      "sharp"
+      "sharp",
+      "vue-demi"
     ]
   },
   "dependencies": {
@@ -55,6 +56,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@vueuse/core": "^13.1.0",
     "@vueuse/nuxt": "^13.1.0",
     "class-variance-authority": "^0.7.1",
@@ -62,9 +64,8 @@
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
-    "prettier": "^3.5.3",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "lefthook": "^1.11.10",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass-embedded": "^1.86.3",
     "tailwind-merge": "^3.2.0",
