--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "dependencies": {
     "@date-fns/tz": "^1.2.0",
     "@node-rs/argon2": "^2.0.2",
-    "@nuxt/fonts": "^0.11.3",
+    "@nuxt/fonts": "^0.11.4",
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "^3.1.1",
     "@nuxtjs/seo": "3.0.3",
-    "@nuxtjs/supabase": "^1.5.0",
+    "@nuxtjs/supabase": "^1.5.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
     "@tiptap/extension-list-item": "^2.12.0",
@@ -38,18 +38,18 @@
     "@tiptap/pm": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/vue-3": "^2.12.0",
-    "@vueuse/integrations": "^13.1.0",
+    "@vueuse/integrations": "^13.2.0",
     "date-fns": "^4.1.0",
     "motion-v": "1.1.0-alpha.1",
-    "nuxt": "^3.17.2",
+    "nuxt": "^3.17.3",
     "qrcode": "^1.5.4",
     "v-calendar": "^3.1.2",
-    "vue": "^3.5.13",
+    "vue": "^3.5.14",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.42",
+    "@iconify-json/lucide": "^1.2.43",
     "@iconify-json/ph": "^1.2.2",
     "@inspira-ui/plugins": "^0.0.1",
     "@nuxt/eslint": "^1.3.1",
@@ -57,8 +57,8 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@vueuse/core": "^13.1.0",
-    "@vueuse/nuxt": "^13.1.0",
+    "@vueuse/core": "^13.2.0",
+    "@vueuse/nuxt": "^13.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.26.0",
@@ -73,5 +73,6 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "valibot": "1.1.0"
-  }
+  },
+  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
