--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
+      "@tailwindcss/oxide",
       "esbuild",
       "lefthook",
       "sharp",
@@ -27,7 +28,7 @@
     "@node-rs/argon2": "^2.0.2",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/image": "1.10.0",
-    "@nuxt/ui": "^3.1.1",
+    "@nuxt/ui": "^3.1.2",
     "@nuxtjs/seo": "3.0.3",
     "@nuxtjs/supabase": "^1.5.1",
     "@paralleldrive/cuid2": "^2.2.2",
@@ -49,10 +50,10 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.43",
+    "@iconify-json/lucide": "^1.2.44",
     "@iconify-json/ph": "^1.2.2",
     "@inspira-ui/plugins": "^0.0.1",
-    "@nuxt/eslint": "^1.3.1",
+    "@nuxt/eslint": "^1.4.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -61,18 +62,17 @@
     "@vueuse/nuxt": "^13.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.26.0",
+    "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
-    "lefthook": "^1.11.12",
+    "lefthook": "^1.11.13",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass-embedded": "^1.88.0",
+    "sass-embedded": "^1.89.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.6",
+    "tailwindcss": "^4.1.7",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "valibot": "1.1.0"
-  },
-  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
+  }
 }
