--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier . --write"
   },
+  "packageManager": "pnpm@10.11.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
+      "@tailwindcss/oxide",
       "esbuild",
       "lefthook",
       "sharp",
@@ -25,51 +27,51 @@
   "dependencies": {
     "@date-fns/tz": "^1.2.0",
     "@node-rs/argon2": "^2.0.2",
-    "@nuxt/fonts": "^0.11.3",
+    "@nuxt/fonts": "^0.11.4",
     "@nuxt/image": "1.10.0",
-    "@nuxt/ui": "^3.1.1",
+    "@nuxt/ui": "^3.1.3",
     "@nuxtjs/seo": "3.0.3",
-    "@nuxtjs/supabase": "^1.5.0",
+    "@nuxtjs/supabase": "^1.5.2",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/extension-list-item": "^2.12.0",
-    "@tiptap/extension-text-align": "^2.12.0",
-    "@tiptap/extension-text-style": "^2.12.0",
-    "@tiptap/pm": "^2.12.0",
-    "@tiptap/starter-kit": "^2.12.0",
-    "@tiptap/vue-3": "^2.12.0",
-    "@vueuse/integrations": "^13.1.0",
+    "@tiptap/extension-list-item": "^2.14.0",
+    "@tiptap/extension-text-align": "^2.14.0",
+    "@tiptap/extension-text-style": "^2.14.0",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
+    "@tiptap/vue-3": "^2.14.0",
+    "@vueuse/integrations": "^13.3.0",
     "date-fns": "^4.1.0",
-    "motion-v": "1.1.0-alpha.1",
-    "nuxt": "^3.17.2",
+    "motion-v": "1.2.1",
+    "nuxt": "^3.17.5",
     "qrcode": "^1.5.4",
     "v-calendar": "^3.1.2",
-    "vue": "^3.5.13",
+    "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.42",
+    "@iconify-json/lucide": "^1.2.49",
     "@iconify-json/ph": "^1.2.2",
     "@inspira-ui/plugins": "^0.0.1",
-    "@nuxt/eslint": "^1.3.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@nuxt/eslint": "^1.4.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@vueuse/core": "^13.1.0",
-    "@vueuse/nuxt": "^13.1.0",
+    "@vueuse/core": "^13.3.0",
+    "@vueuse/nuxt": "^13.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.26.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "lefthook": "^1.11.12",
+    "eslint-plugin-prettier": "^5.4.1",
+    "lefthook": "^1.11.13",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass-embedded": "^1.88.0",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.6",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "sass-embedded": "^1.89.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.10",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "valibot": "1.1.0"
