--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier . --write"
   },
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.12.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
@@ -34,24 +34,25 @@
     "@nuxtjs/supabase": "^1.5.2",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/extension-list-item": "^2.14.0",
-    "@tiptap/extension-text-align": "^2.14.0",
-    "@tiptap/extension-text-style": "^2.14.0",
-    "@tiptap/pm": "^2.14.0",
-    "@tiptap/starter-kit": "^2.14.0",
-    "@tiptap/vue-3": "^2.14.0",
-    "@vueuse/integrations": "^13.3.0",
+    "@tiptap/extension-list-item": "^2.22.1",
+    "@tiptap/extension-text-align": "^2.22.1",
+    "@tiptap/extension-text-style": "^2.22.1",
+    "@tiptap/pm": "^2.22.1",
+    "@tiptap/starter-kit": "^2.22.1",
+    "@tiptap/vue-3": "^2.22.1",
+    "@vueuse/integrations": "^13.4.0",
     "date-fns": "^4.1.0",
-    "motion-v": "1.2.1",
+    "motion-v": "1.3.0",
     "nuxt": "^3.17.5",
     "qrcode": "^1.5.4",
     "v-calendar": "^3.1.2",
-    "vue": "^3.5.16",
+    "vue": "^3.5.17",
+    "vue-picture-cropper": "^0.7.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.49",
+    "@iconify-json/lucide": "^1.2.51",
     "@iconify-json/ph": "^1.2.2",
     "@inspira-ui/plugins": "^0.0.1",
     "@nuxt/eslint": "^1.4.1",
@@ -59,16 +60,16 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@vueuse/core": "^13.3.0",
-    "@vueuse/nuxt": "^13.3.0",
+    "@vueuse/core": "^13.4.0",
+    "@vueuse/nuxt": "^13.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.1",
-    "lefthook": "^1.11.13",
+    "eslint-plugin-prettier": "^5.5.0",
+    "lefthook": "^1.11.14",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "sass-embedded": "^1.89.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
