--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
   "plugins": [
     "prettier-plugin-tailwindcss",
-    "@trivago/prettier-plugin-sort-imports"
+    "@trivago/prettier-plugin-sort-imports",
+    "@prettier/plugin-oxc"
   ],
   "printWidth": 80,
   "arrowParens": "avoid",
