--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier . --write"
   },
-  "packageManager": "pnpm@10.12.0",
+  "packageManager": "pnpm@10.12.4",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
@@ -29,20 +29,20 @@
     "@node-rs/argon2": "^2.0.2",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/image": "1.10.0",
-    "@nuxt/ui": "^3.1.3",
-    "@nuxtjs/seo": "3.0.3",
-    "@nuxtjs/supabase": "^1.5.2",
+    "@nuxt/ui": "^3.2.0",
+    "@nuxtjs/seo": "3.1.0",
+    "@nuxtjs/supabase": "^1.5.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/extension-list-item": "^2.22.1",
-    "@tiptap/extension-text-align": "^2.22.1",
-    "@tiptap/extension-text-style": "^2.22.1",
-    "@tiptap/pm": "^2.22.1",
-    "@tiptap/starter-kit": "^2.22.1",
-    "@tiptap/vue-3": "^2.22.1",
+    "@tiptap/extension-list-item": "^2.23.0",
+    "@tiptap/extension-text-align": "^2.23.0",
+    "@tiptap/extension-text-style": "^2.23.0",
+    "@tiptap/pm": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
+    "@tiptap/vue-3": "^2.23.0",
     "@vueuse/integrations": "^13.4.0",
     "date-fns": "^4.1.0",
-    "motion-v": "1.3.0",
+    "motion-v": "1.3.1",
     "nuxt": "^3.17.5",
     "qrcode": "^1.5.4",
     "v-calendar": "^3.1.2",
@@ -52,11 +52,12 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.51",
+    "@iconify-json/lucide": "^1.2.53",
     "@iconify-json/ph": "^1.2.2",
     "@inspira-ui/plugins": "^0.0.1",
     "@nuxt/eslint": "^1.4.1",
-    "@supabase/supabase-js": "^2.50.0",
+    "@prettier/plugin-oxc": "^0.0.4",
+    "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -64,15 +65,15 @@
     "@vueuse/nuxt": "^13.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-prettier": "^5.5.1",
     "lefthook": "^1.11.14",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "sass-embedded": "^1.89.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "valibot": "1.1.0"
